# flappy_automation_test

./: README.md
flappy_automation_code/: CMakeLists.txt  package.xml
flappy_automation_code/include/flappy_automation_code/: flappy_automation_code.hpp
flappy_automation_code/launch/: flappy_automation_code_cpp.launch  flappy_automation_code_py.launch
flappy_automation_code/scripts/: flappy_automation_code_node.py
flappy_automation_code/src/: flappy_automation_code.cpp
flappy_main_game/: CMakeLists.txt  package.xml
flappy_main_game/scripts/: flappy.py  laser.py
